Refactor CapacityProductExtractor to use swatch-product-configurations
- Removed reference to TagProfile
- Consolidated a bunch of overloaded "getProducts" methods
- "Kick out" duplicate RHEL products by consulting the "includedSubscription" property from the config files